Fix bug with product-card size ond overflow of name on product card

--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -1,7 +1,5 @@
 .product-card {
 	position: relative;
-	
-	// width: 310px;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -52,9 +50,13 @@
 	}
 
 	&__name {
+		display: inline-block;
+		height: 60px;
+		overflow: hidden;
 
 		color: #333;
 		line-height: 20px;
+		text-overflow: ellipsis;
 	}
 	&__advantages {
 		position: absolute;
